Add Images and Minor Fixes

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,16 @@
 {
     "manifest_version": 3,
-    "name": "An exstension to save cool/intersting websites or tools for latter or to just not forget about them",
+    "name": "Keeper",
+    "description": "An exstension to save cool/intersting websites or tools for latter or to just not forget about them",
     "version": "1.0.0",
     "action": {
-      "default_popup": "hello.html",
-      "default_icon": "hello_extensions.png"
+      "default_popup": "popup/popup.html",
+      "default_icon": "popup/images/icon-128.png"
     }
     ,"icons": {
-    "16": "hello_extensions.png"
+    "16": "popup/images/icon-16.png",
+    "32": "popup/images/icon-32.png",
+    "48": "popup/images/icon-48.png",
+    "128": "popup/images/icon-128.png"
   }
 }
