--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,16 @@
 {
-    "manifest_version": 3,
-    "name": "Keeper",
-    "description": "An exstension to save cool/intersting websites or tools for latter or to just not forget about them",
-    "version": "1.0.0",
-    "action": {
-      "default_popup": "popup/popup.html",
-      "default_icon": "popup/images/icon-128.png"
-    }
-    ,"icons": {
+  "manifest_version": 3,
+  "name": "Keeper",
+  "description": "A Browser Extension For saving all those cool websites you come across.",
+  "version": "1.0.0",
+  "action": {
+    "default_popup": "popup/popup.html",
+    "default_icon": "popup/images/icon-128.png"
+  },
+  "permissions": [
+    "tabs"
+  ],
+  "icons": {
     "16": "popup/images/icon-16.png",
     "32": "popup/images/icon-32.png",
     "48": "popup/images/icon-48.png",
